@@ -6,9 +6,10 @@ ChangeLog
 
 GIT HEAD
 
+- Re-defined all JACK stand-alone client application UNIX
+  signal handling. (EXPERIMENTAL)
 - Probable fix to sample offset range changes across native
   UI and loading and saving state. (EXPERIMENTAL)
-- Post-LAC2019 development cycle started (towards v0.9.7)...
 
 
 0.9.6  2019-03-18  Pre-LAC2019 Release Frenzy.
